<resources>
    <string name="app_name">One</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="title_home">首页</string>
    <string name="title_search">发现</string>
    <string name="title_message">消息</string>
    <string name="title_my">我的</string>
    <string name="title_prompt">提示</string>
    <string name="title_date">日期</string>
    <string name="title_serial">连载</string>
    <string name="title_questions_answers">问答</string>
    <string name="title_movie">影视</string>
    <string name="title_music">音乐</string>
    <string name="title_answer">答</string>
    <string name="title_read">阅读</string>
    <string name="title_category_navigation">分类导航</string>
    <string name="title_hot_authors">热门作者</string>
    <string name="title_top_questions">热门话题</string>
    <string name="title_collect">收藏</string>
    <string name="title_option">选项</string>
    <string name="title_setting">设置</string>
    <string name="title_about">关于</string>
    <string name="title_attention">关注</string>
    <string name="title_music_list">歌单</string>
    <string name="title_follow_list">TA的关注</string>
    <string name="title_illustration">图文</string>
    <string name="title_radio">电台</string>
    <string name="title_surface_view">SurfaceView</string>
    <string name="title_experiment">测试</string>

    <string name="prompt_exit_app">再按一次退出程序</string>
    <string name="prompt_hot_comment">(热门评论)</string>
    <string name="prompt_permission_grant">无此权限部分功能将无法使用</string>
    <string name="prompt_permission_error">获取权限失败</string>
    <string name="prompt_input_content">请输入内容</string>
    <string name="prompt_intput_account">请输入账号</string>
    <string name="prompt_input_password">请输入密码</string>
    <string name="prompt_input_password_length">请输入正确格式的密码</string>
    <string name="prompt_intput_account_length">请输入正确格式的账号</string>
    <string name="prompt_clear_success">清除成功</string>
    <string name="prompt_clear_fail">清除失败</string>
    <string name="prompt_refresh_success">刷新成功</string>

    <string name="content_loading">加载中...</string>
    <string name="content_clear_cache">确定清除缓存？</string>
    <string name="content_exit_app">确定退出登录？</string>

    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_find">发现</string>
    <string name="btn_follow">关注</string>
    <string name="btn_followed">已关注</string>
    <string name="btn_login">登录</string>
    <string name="title_login">登录</string>
    <string name="hint_phone">手机号码</string>
    <string name="hint_password">密码</string>

    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_exit_login">退出登录</string>
    <string name="setting_app_version">版本号</string>
    <string name="setting_user_agreement">用户协议</string>
</resources>
