<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_margin_16"
                android:background="@color/color_f5" />

            <RelativeLayout
                android:id="@+id/rl_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:paddingLeft="@dimen/main_margin_16"
                android:paddingRight="@dimen/main_margin_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_clear_cache"
                    android:textColor="@color/color_666"
                    android:textSize="@dimen/dimen_16" />

                <TextView
                    android:id="@+id/tv_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_999"
                    android:textSize="@dimen/dimen_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_margin_16"
                android:background="@color/color_f5" />

            <RelativeLayout
                android:id="@+id/rl_app_version"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:paddingLeft="@dimen/main_margin_16"
                android:paddingRight="@dimen/main_margin_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_app_version"
                    android:textColor="@color/color_666"
                    android:textSize="@dimen/dimen_16" />

                <TextView
                    android:id="@+id/tv_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_999"
                    android:textSize="@dimen/dimen_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_margin_16"
                android:background="@color/color_f5" />

            <RelativeLayout
                android:id="@+id/rl_user_agreement"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:paddingLeft="@dimen/main_margin_16"
                android:paddingRight="@dimen/main_margin_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_user_agreement"
                    android:textColor="@color/color_666"
                    android:textSize="@dimen/dimen_16" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_margin_16"
                android:background="@color/color_f5" />

            <RelativeLayout
                android:id="@+id/rl_exit_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:paddingLeft="@dimen/main_margin_16"
                android:paddingRight="@dimen/main_margin_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_exit_login"
                    android:textColor="@color/color_666"
                    android:textSize="@dimen/dimen_16" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_margin_16"
                android:background="@color/color_f5" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>