<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_40">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/main_margin_16"
            android:paddingLeft="@dimen/main_margin_16"
            android:paddingRight="@dimen/main_margin_16">

            <ImageView
                android:id="@+id/iv_attention_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/my_attention_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_margin_16"
                android:layout_toRightOf="@+id/iv_attention_icon"
                android:text="@string/title_follow_list"
                android:textColor="@color/color_666"
                android:textSize="@dimen/main_margin_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/main_margin_16"
            android:paddingLeft="@dimen/main_margin_16"
            android:paddingRight="@dimen/main_margin_16">

            <ImageView
                android:id="@+id/iv_illustration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/center_image_collection" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_margin_16"
                android:layout_toRightOf="@+id/iv_illustration"
                android:text="@string/title_illustration"
                android:textColor="@color/color_666"
                android:textSize="@dimen/main_margin_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/main_margin_16"
            android:paddingLeft="@dimen/main_margin_16"
            android:paddingRight="@dimen/main_margin_16">

            <ImageView
                android:id="@+id/iv_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/center_reading_collection" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_margin_16"
                android:layout_toRightOf="@+id/iv_reading"
                android:text="@string/title_read"
                android:textColor="@color/color_666"
                android:textSize="@dimen/main_margin_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/main_margin_16"
            android:paddingLeft="@dimen/main_margin_16"
            android:paddingRight="@dimen/main_margin_16">

            <ImageView
                android:id="@+id/iv_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/center_music_collection" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_margin_16"
                android:layout_toRightOf="@+id/iv_music"
                android:text="@string/title_music"
                android:textColor="@color/color_666"
                android:textSize="@dimen/main_margin_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/main_margin_16"
            android:paddingLeft="@dimen/main_margin_16"
            android:paddingRight="@dimen/main_margin_16">

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/center_movie_collection" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_margin_16"
                android:layout_toRightOf="@+id/iv_movie"
                android:text="@string/title_movie"
                android:textColor="@color/color_666"
                android:textSize="@dimen/main_margin_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/main_margin_16"
            android:paddingLeft="@dimen/main_margin_16"
            android:paddingRight="@dimen/main_margin_16">

            <ImageView
                android:id="@+id/iv_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/center_radio_collection" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/main_margin_16"
                android:layout_toRightOf="@+id/iv_radio"
                android:text="@string/title_radio"
                android:textColor="@color/color_666"
                android:textSize="@dimen/main_margin_16" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>