<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/rl_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/main_margin_16"
        android:background="@drawable/shape_login_input_bg">

        <RelativeLayout
            android:id="@+id/rl_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:paddingLeft="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_10">

            <ImageView
                android:id="@+id/iv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <ImageView
                android:id="@+id/btn_clear_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_cancel_black_24dp" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_toLeftOf="@id/btn_clear_account"
                android:layout_toRightOf="@id/iv_account"
                android:background="@null"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textColor="@color/color_333"
                android:textColorHint="@color/color_ccc"
                android:textSize="@dimen/dimen_16" />
        </RelativeLayout>

        <View
            android:id="@+id/v_line_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:layout_below="@id/rl_account"
            android:background="@color/color_ccc" />

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:layout_below="@id/v_line_divider"
            android:paddingLeft="@dimen/dimen_10"
            android:paddingRight="@dimen/dimen_10">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_lock_black_24dp" />

            <ImageView
                android:id="@+id/btn_password_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_eye_black_24dp" />

            <ImageView
                android:id="@+id/btn_clear_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_cancel_black_24dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_toLeftOf="@id/btn_clear_password"
                android:layout_toRightOf="@id/iv_password"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/color_333"
                android:textColorHint="@color/color_ccc"
                android:textSize="@dimen/dimen_16" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_below="@id/rl_input"
        android:layout_marginLeft="@dimen/main_margin_16"
        android:layout_marginRight="@dimen/main_margin_16"
        android:background="@drawable/selector_btn_accent"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18" />
</RelativeLayout>